Update CV and publications with 2025 additions.
- Add 14 invited talks (Aug-Dec 2025) including NeurIPS MI Workshop, ICCV workshops, Harvard AISST, and Yascha Mounk podcast
- Add 4 peer-reviewed publications: TMLR (Open Problems in MI), ISC 2025, SIGGRAPH Asia 2023, ICCV 2023 Workshop
- Add COLM 2025 paper (Dual-Route Model of Induction) to publications.html
- Update NeurIPS 2025 paper title to "LLMs Encode Harmfulness and Refusal Separately"
- Fix malformed <em> tag in ICML 2025 entry

--- a/public/cv.html
+++ b/public/cv.html
@@ -290,6 +290,13 @@ innovative programming tool project.
 </div>
 
 <div class="main pub">
+Lee Sharkey, Bilal Chughtai, Joshua Batson, Jack Lindsey, Jeff Wu, Lucius Bushnaq, Nicholas Goldowsky-Dill, Stefan Heimersheim, Alejandro Ortega, Joseph Bloom, Stella Biderman, Adri&agrave; Garriga-Alonso, Arthur Conmy, Neel Nanda, Jessica Rumbelow, Martin Wattenberg, Nandi Schoots, Joseph Miller, William Saunders, Eric J. Michaud, Stephen Casper, Max Tegmark, <strong>David Bau</strong>, Eric Todd, Atticus Geiger, Mor Geva, Jesse Hoogland, Daniel Murfet, Tom McGrath.
+<a href="https://openreview.net/forum?id=91H76m9Z94">Open Problems in Mechanistic Interpretability</a>.
+  <em>Transactions on Machine Learning Research 2025.</em>
+  <nobr>(TMLR 2025)</nobr>
+</div>
+
+<div class="main pub">
 Anka Reuel, Benjamin Bucknall, Stephen Casper, Timothy Fist, Lisa Soder, Onni Aarne, Lewis Hammond, Lujain Ibrahim, Alan Chan, Peter Wills, Markus Anderljung, Ben Garfinkel, Lennart Heim, Andrew Trask, Gabriel Mukobi, Rylan Schaeffer, Mauricio Baker, Sara Hooker, Irene Solaiman, Sasha Luccioni, Nitarshan Rajkumar, Nicolas Mo&euml;s, Jeffrey Ladish, <strong>David Bau</strong>, Paul Bricman, Neel Guha, Jessica Newman, Yoshua Bengio, Tobin South, Alex Pentland, Sanmi Koyejo, Mykel J. Kochenderfer, Robert Trager.
 <a href="https://arxiv.org/abs/2407.14981">Open Problems in Technical AI Governance</a>.
   <em>Transactions on Machine Learning Research 2025.</em>
@@ -353,7 +360,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
   Jiachen Zhao, Jing Huang, Zhengxuan Wu, <strong>David Bau</strong>,
   Weiyan Shi.
   <a href="https://arxiv.org/abs/2507.11878"
-    >Decoupling Harmfulness from Refusal in LLMs</a>.
+    >LLMs Encode Harmfulness and Refusal Separately</a>.
   <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
@@ -374,7 +381,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
   Jing Huang, Rohan Gupta, Yaniv Nikankin, Hadas Orgad, Nikhil Prakash,
   Anja Reusch, Aruna Sankaranarayanan, Shun Shao, Alessandro Stolfo,
   Martin Tutek, Amir Zur, <strong>David Bau</strong>, Yonatan Belinkov.
-  <emProceedings of the 42nd International Conference on Machine Learning</em>.
+  <em>Proceedings of the 42nd International Conference on Machine Learning</em>.
   <a href="https://arxiv.org/abs/2504.13151"
     >MIB: A Mechanistic Interpretability Benchmark</a>.
   <nobr>(ICML 2025)</nobr>
@@ -413,6 +420,20 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
    >Model Lakes</a>.
   <em>Proceedings of the 28th International Conference on Extending Database Technology.</em>
   <nobr>(EDBT 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Keita Teranishi, Harshitha Menon, William F. Godoy, Prasanna Balaprakash,
+  <strong>David Bau</strong>, Tal Ben-Nun, Abhinav Bhatele, Franz Franchetti,
+  Michael E. Franusich, Todd Gamblin, Giorgis Georgakoudis, Tom Goldstein,
+  Arjun Guha, Steven E. Hahn, Costin Iancu, Zheming Jin, Terry R. Jones,
+  Tze Meng Low, Het Mankad, Narasinga Rao Miniskar, Mohammad Alaul Haque Monil,
+  Daniel Nichols, Konstantinos Parasyris, Swaroop Pophale, Pedro Valero-Lara,
+  Jeffrey S. Vetter, Samuel Williams, Aaron R. Young.
+  <a href="https://doi.org/10.1007/978-3-032-07612-0_47"
+    >Leveraging AI for Productive and Trustworthy HPC Software: Challenges and Research Directions</a>.
+  <em>Proceedings of the ISC High Performance 2025 International Workshops.</em>
+  <nobr>(ISC 2025)</nobr>
 </div>
 
 <div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell,
@@ -506,6 +527,14 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 
 <div class="main pub">
   Rohit Gandikota, Joanna Materzy&nacute;ska, Jaden Fiotto-Kaufman, <strong>David Bau</strong>. <a href="https://erasing.baulab.info/">Erasing Concepts from Diffusion Models.</a> <em>Proceedings of the 2023 IEEE International Conference on Computer Vision</em> <nobr>(ICCV 2023)</nobr>.
+</div>
+
+<div class="main pub">
+  Daohan Lu, Sheng-Yu Wang, Nupur Kumari, Rohan Agarwal, Mia Tang,
+  <strong>David Bau</strong>, Jun-Yan Zhu.
+  <a href="https://doi.org/10.1145/3610548.3618189">Content-based Search for Deep Generative Models</a>.
+  <em>SIGGRAPH Asia 2023 Conference Papers.</em>
+  <nobr>(SIGGRAPH Asia 2023)</nobr>
 </div>
 
 <div class="main pub">
@@ -626,6 +655,13 @@ Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas S
 </div>
 
 <div class="main pub">
+  Sarah Schwettmann, Neil Chowdhury, Samuel Klein, <strong>David Bau</strong>, Antonio Torralba.
+  <a href="https://doi.org/10.1109/ICCVW60793.2023.00308">Multimodal Neurons in Pretrained Text-Only Transformers</a>.
+  <em>IEEE/CVF International Conference on Computer Vision Workshops.</em>
+  <nobr>(ICCV 2023 Workshop)</nobr>
+</div>
+
+<div class="main pub">
 Xander Davies, Max Nadeau, Nikhil Prakash, Tamar Rott Shaham, <strong>David Bau</strong>. <a href="https://das.baulab.info/">Discovering Variable Binding Circuitry with Desiderata.</a> <em>Workshop on Challenges in Deployable Generative AI</em> <nobr>(ICML 2023 Workshop)</nobr>
 </div>
 <div class="main pub">
@@ -711,6 +747,20 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub">In Defense of Curiosity. <em>Mechanistic Interpretability Workshop at NeurIPS.</em> December 2025.</div>
+<div class="main pub">What Changes When We Can Read the Thoughts of AI? <em>Harvard AISST Workshop.</em> Essex, MA. November 2025.</div>
+<div class="main pub">Three Perspectives on AI Interpretability. <em>AI Safety Institute Workshop.</em> London, UK. October 2025.</div>
+<div class="main pub">Localizing LLM Medical Knowledge through Vignettes. <em>BUSCUIT Workshop at ICCV.</em> Honolulu, HI. October 2025.</div>
+<div class="main pub">Are AI Concepts the Same as Words? <em>eXCV Quo Vadis Workshop at ICCV.</em> Honolulu, HI. October 2025.</div>
+<div class="main pub">European Deep Inference Fabric. <em>AI Transparency Days Workshop.</em> Nuremberg, Germany (remote). October 2025.</div>
+<div class="main pub">Concepts Beyond Words. <em>University of Hawaii AI Seminar.</em> Honolulu, HI. October 2025.</div>
+<div class="main pub">Resilience in Large-Scale AI. <em>Computer Security Alliance AI Summit.</em> Virtual. October 2025.</div>
+<div class="main pub">How Artificial Intelligence Works. <em><a href="https://www.persuasion.community/p/david-bau">The Good Fight Podcast</a> with Yascha Mounk.</em> September 2025.</div>
+<div class="main pub">Interpretable AI. <em>AGI(I) Workshop at Harvard Law School.</em> Cambridge, MA. September 2025.</div>
+<div class="main pub">Concept Representations in AI. <em>Boston University AI Distinguished Speaker Series.</em> Boston, MA. September 2025.</div>
+<div class="main pub">AI Concepts. <em>AI Seminar at Lawrence Livermore National Laboratory.</em> September 2025.</div>
+<div class="main pub"><em>Keynote: Welcome to NEMI.</em> New England Mechanistic Interpretability Workshop. Boston, MA. August 2025.</div>
+<div class="main pub">AI Atlas. <em>Goodfire Unconference.</em> San Francisco, CA. August 2025.</div>
 <div class="main pub">Interpretability, Resilience, and Infrastructure in AI. <em>Public AI Seminar Series.</em> July 2025.</div>
 <div class="main pub">How to Understand Mechanisms in Large-Scale AI. <em>Cambridge Boston Alignment Initiative Seminar Series.</em> Cambridge, MA. July 2025.</div>
 <div class="main pub"><em>Keynote: What is AI Interpretability For?</em> <a href="https://sites.google.com/view/miv-cvpr2025/">Mechanistic Interpretability in Vision Workshop at CVPR.</a> Nashville, TN. June 2025.</div>
