--- a/public/publications.html
+++ b/public/publications.html
@@ -161,6 +161,14 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Sheridan Feucht, Eric Todd, Byron C. Wallace, <strong>David Bau</strong>.
+  <a href="https://dualroute.baulab.info/"
+    >The Dual-Route Model of Induction</a>.
+  <em>Second Conference on Language Modeling.</em>
+  <nobr>(COLM 2025)</nobr>
+</div>
+
+<div class="main pub">
   Rohit Gandikota, Sheridan Feucht, Samuel Marks, <strong>David Bau</strong>.
   <a href="https://elm.baulab.info/"
     >Erasing Conceptual Knowledge from Language Models</a>.
@@ -190,7 +198,7 @@ figcaption {
   Jiachen Zhao, Jing Huang, Zhengxuan Wu, <strong>David Bau</strong>,
   Weiyan Shi.
   <a href="https://arxiv.org/abs/2507.11878"
-    >Decoupling Harmfulness from Refusal in LLMs</a>.
+    >LLMs Encode Harmfulness and Refusal Separately</a>.
   <em>Advances in Neural Information Processing Systems 39.</em>
   <nobr>(NeurIPS 2025)</nobr>
 </div>
@@ -211,7 +219,7 @@ figcaption {
   Jing Huang, Rohan Gupta, Yaniv Nikankin, Hadas Orgad, Nikhil Prakash,
   Anja Reusch, Aruna Sankaranarayanan, Shun Shao, Alessandro Stolfo,
   Martin Tutek, Amir Zur, <strong>David Bau</strong>, Yonatan Belinkov.
-  <emProceedings of the 42nd International Conference on Machine Learning</em>.
+  <em>Proceedings of the 42nd International Conference on Machine Learning</em>.
   <a href="https://arxiv.org/abs/2504.13151"
     >MIB: A Mechanistic Interpretability Benchmark</a>.
   <nobr>(ICML 2025)</nobr>
@@ -250,6 +258,20 @@ figcaption {
    >Model Lakes</a>.
   <em>Proceedings of the 28th International Conference on Extending Database Technology.</em>
   <nobr>(EDBT 2025)</nobr>
+</div>
+
+<div class="main pub">
+  Keita Teranishi, Harshitha Menon, William F. Godoy, Prasanna Balaprakash,
+  <strong>David Bau</strong>, Tal Ben-Nun, Abhinav Bhatele, Franz Franchetti,
+  Michael E. Franusich, Todd Gamblin, Giorgis Georgakoudis, Tom Goldstein,
+  Arjun Guha, Steven E. Hahn, Costin Iancu, Zheming Jin, Terry R. Jones,
+  Tze Meng Low, Het Mankad, Narasinga Rao Miniskar, Mohammad Alaul Haque Monil,
+  Daniel Nichols, Konstantinos Parasyris, Swaroop Pophale, Pedro Valero-Lara,
+  Jeffrey S. Vetter, Samuel Williams, Aaron R. Young.
+  <a href="https://doi.org/10.1007/978-3-032-07612-0_47"
+    >Leveraging AI for Productive and Trustworthy HPC Software: Challenges and Research Directions</a>.
+  <em>Proceedings of the ISC High Performance 2025 International Workshops.</em>
+  <nobr>(ISC 2025)</nobr>
 </div>
 
 <div class="main pub">Adam Karvonen, Benjamin Wright, Can Rager, Rico Angell,
@@ -343,6 +365,14 @@ figcaption {
 
 <div class="main pub">
   Rohit Gandikota, Joanna Materzy&nacute;ska, Jaden Fiotto-Kaufman, <strong>David Bau</strong>. <a href="https://erasing.baulab.info/">Erasing Concepts from Diffusion Models.</a> <em>Proceedings of the 2023 IEEE International Conference on Computer Vision</em> <nobr>(ICCV 2023)</nobr>.
+</div>
+
+<div class="main pub">
+  Daohan Lu, Sheng-Yu Wang, Nupur Kumari, Rohan Agarwal, Mia Tang,
+  <strong>David Bau</strong>, Jun-Yan Zhu.
+  <a href="https://doi.org/10.1145/3610548.3618189">Content-based Search for Deep Generative Models</a>.
+  <em>SIGGRAPH Asia 2023 Conference Papers.</em>
+  <nobr>(SIGGRAPH Asia 2023)</nobr>
 </div>
 
 <div class="main pub">
@@ -448,6 +478,13 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 </div>
 
 <div class="main pub">
+Lee Sharkey, Bilal Chughtai, Joshua Batson, Jack Lindsey, Jeff Wu, Lucius Bushnaq, Nicholas Goldowsky-Dill, Stefan Heimersheim, Alejandro Ortega, Joseph Bloom, Stella Biderman, Adri&agrave; Garriga-Alonso, Arthur Conmy, Neel Nanda, Jessica Rumbelow, Martin Wattenberg, Nandi Schoots, Joseph Miller, William Saunders, Eric J. Michaud, Stephen Casper, Max Tegmark, <strong>David Bau</strong>, Eric Todd, Atticus Geiger, Mor Geva, Jesse Hoogland, Daniel Murfet, Tom McGrath.
+<a href="https://openreview.net/forum?id=91H76m9Z94">Open Problems in Mechanistic Interpretability</a>.
+  <em>Transactions on Machine Learning Research 2025.</em>
+  <nobr>(TMLR 2025)</nobr>
+</div>
+
+<div class="main pub">
 Anka Reuel, Benjamin Bucknall, Stephen Casper, Timothy Fist, Lisa Soder, Onni Aarne, Lewis Hammond, Lujain Ibrahim, Alan Chan, Peter Wills, Markus Anderljung, Ben Garfinkel, Lennart Heim, Andrew Trask, Gabriel Mukobi, Rylan Schaeffer, Mauricio Baker, Sara Hooker, Irene Solaiman, Sasha Luccioni, Nitarshan Rajkumar, Nicolas Mo&euml;s, Jeffrey Ladish, <strong>David Bau</strong>, Paul Bricman, Neel Guha, Jessica Newman, Yoshua Bengio, Tobin South, Alex Pentland, Sanmi Koyejo, Mykel J. Kochenderfer, Robert Trager.
 <a href="https://arxiv.org/abs/2407.14981">Open Problems in Technical AI Governance</a>.
   <em>Transactions on Machine Learning Research 2025.</em>
@@ -497,6 +534,13 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
     >Testing Language Model Agents Safely in the Wild.</a>
   <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em>
   <nobr>(SoLaR 2023, NeurIPS 2023 Workshop)</nobr>.
+</div>
+
+<div class="main pub">
+  Sarah Schwettmann, Neil Chowdhury, Samuel Klein, <strong>David Bau</strong>, Antonio Torralba.
+  <a href="https://doi.org/10.1109/ICCVW60793.2023.00308">Multimodal Neurons in Pretrained Text-Only Transformers</a>.
+  <em>IEEE/CVF International Conference on Computer Vision Workshops.</em>
+  <nobr>(ICCV 2023 Workshop)</nobr>
 </div>
 
 <div class="main pub">
