Add Opt-In Art paper (NeurIPS 2025)

--- a/public/publications.html
+++ b/public/publications.html
@@ -204,6 +204,15 @@ figcaption {
 </div>
 
 <div class="main pub">
+  Hui Ren, Joanna Materzy&nacute;ska, Rohit Gandikota, Giannis Daras,
+  <strong>David Bau</strong>, Antonio Torralba.
+  <a href="https://arxiv.org/abs/2412.00176"
+    >Opt-In Art: Learning Art Styles Only from Few Examples</a>.
+  <em>Advances in Neural Information Processing Systems 39.</em>
+  <nobr>(NeurIPS 2025)</nobr>
+</div>
+
+<div class="main pub">
   Rohit Gandikota, Zongze Wu, Richard Zhang, <strong>David Bau</strong>,
   Eli Shechtman, Nick Kolkin.
   <a href="https://sliderspace.baulab.info/"
