--- a/public/students.html
+++ b/public/students.html
@@ -182,7 +182,9 @@ interests.</p>
 <p>Prospective postdocs should reach out to me directly.
 </p>
 
-<p>Undergrad and MS students: the way to get involved is to team up with one of the PhD students or postdocs in the lab, who you can find on the homepage.
+<p>Undergrad and MS students: the way to get involved is to team up with one of the PhD students or postdocs in the lab, or to get involved in the
+NDIF project; you can find them listed on the homepage, with links to their websites on each photo.  You should reach out to them directly if one
+of them is doing work that interests you.
 
 <p>Am I the right advisor for you?
 My <a href="publications.html">previous publications</a>
